# PDFixed

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build_windows_exe.ps1  normalize_pdf.py  normalize_pdf_gui.py  pyinstaller.spec  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/: copilot-instructions.md
src/pdfnormal/: __init__.py  __main__.py  main.py
src/pdfnormal/core/: __init__.py  crop_utils.py  image_processor.py  models.py  multi_pdf_processor.py  pdf_processor.py
src/pdfnormal/gui/: __init__.py  main_window.py  workers.py
src/pdfnormal/gui/screens/: __init__.py  blank_confirmation_screen.py  import_screen.py  margin_screen.py  organizer_screen.py  results_screen.py
src/pdfnormal/gui/widgets/: __init__.py
src/pdfnormal/utils/: __init__.py  constants.py  logger.py
tests/: conftest.py  test_image_processor.py  test_models.py  test_pdf_processor.py
